Feat: 매거진 유형별 조회 페이지
Former-commit-id: 5eecb5e439b525adb7e6e70c099a97300f16a8fd

--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
@@ -68,8 +68,13 @@
   padding-bottom: 45px;
 }
 
+.magazine-main-cate-container {
+  margin-bottom: 50px;
+}
+
 .magazine-main-cate-title {
   font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .magazine-main-cate-contents {
