--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMainCateCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMainCateCard.css
@@ -4,6 +4,18 @@
   justify-content: space-between;
   align-items: center;
   width: 100px;
-  height: 200px;
-  background-color: beige;
+}
+
+.cate-card-title {
+  width: 100px;
+  height: 40px;
+  background-color: blueviolet;
+  margin-top: 15px;
+  border: none;
+}
+
+.cate-card-img {
+  width: 100px;
+  height: 120px;
+  background-color: bisque;
 }
