Feat: 매거진화면 axios 다 받기
Former-commit-id: d2f7346ea457ed3e10a93cc6f9ee2f744daf294b

--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
@@ -108,3 +108,8 @@
 .magazine-main-custom-title {
   font-size: 60px;
 }
+
+.magazine-main-custom-posting-content {
+  display: flex;
+  justify-content: space-between;
+}
