--- a/frontend/here_law/src/components/search/caselist/Loader.css
+++ b/frontend/here_law/src/components/search/caselist/Loader.css
@@ -1,9 +1,14 @@
 .loader-wrapper {
-  margin-top: 250px;
+  position: fixed; /* 화면에 고정 */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px; /* 로딩 창의 높이를 설정 (필요에 따라 조정 가능) */
+  z-index: 1000; /* 최상단에 표시되도록 z-index 설정 */
 }
 
 .loader {
