--- a/frontend/here_law/src/components/common/Header.css
+++ b/frontend/here_law/src/components/common/Header.css
@@ -3,4 +3,15 @@
   height: 75px;
   border-bottom: 1px solid #d7dedd;
   background-color: white;
+  /* position: fixed;
+  top: 0;
+  display: flex;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000; */
+}
+
+.logo {
+  cursor: pointer;
+  width: auto; /* 원하는 크기로 로고 크기 조정 */
+  height: 100%;
 }
