Feat: 매거진 맞춤형 페이지 구현
Former-commit-id: f8c081cb96208914a9fc3ea5907f41a253d39959

--- a/frontend/here_law/src/components/magazine/magazinemain/CaseTypeCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/CaseTypeCard.css
@@ -23,6 +23,10 @@
 
 .case-type-card-title {
   width: 600px;
+  display: -webkit-box; /* flexbox 사용 */
+  -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
+  -webkit-line-clamp: 1; /* 표시할 줄 수 */
+  overflow: hidden; /* 넘치는 텍스트 숨김 */
 }
 
 .case-type-card-content {
