--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
@@ -55,6 +55,7 @@
   -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
   -webkit-line-clamp: 4; /* 표시할 줄 수 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
+  margin-bottom: 20px;
 }
 
 .magazine-main-detail-button {
@@ -101,7 +102,8 @@
 .magazine-main-posting-box {
   width: 570px;
   height: 610px;
-  background-color: aquamarine;
+  background-color: #ebeef3;
+  border-radius: 10px 0px 0px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -113,6 +115,7 @@
   width: 570px;
   height: 610px;
   background-color: bisque;
+  border-radius: 0px 10px 10px 0px;
 }
 
 .magazine-main-custom-title {
