--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMainCateCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMainCateCard.css
@@ -9,13 +9,16 @@
 .cate-card-title {
   width: 100px;
   height: 40px;
-  background-color: blueviolet;
-  margin-top: 15px;
+  border-radius: 5px;
+  background-color: #ebeef3;
+  margin-top: 10px;
   border: none;
+  font-size: 12px;
 }
 
 .cate-card-img {
   width: 100px;
   height: 120px;
+  border-radius: 5px;
   background-color: bisque;
 }
