--- a/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
+++ b/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
@@ -41,6 +41,7 @@
 .magazine-my-subs-title {
   font-size: 24px;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .magazine-my-interest-card-box {
