--- a/frontend/here_law/src/components/document/SojangInputContainer2.css
+++ b/frontend/here_law/src/components/document/SojangInputContainer2.css
@@ -43,7 +43,7 @@
 
   outline: none;
   padding: 0 15px;
-  box-sizing: border-box; /* 패딩 포함한 크기 계산 */
+  box-sizing: border-box;
 }
 
 /* 팁박스 */
@@ -51,10 +51,11 @@
   width: 672px;
   height: 90px;
   background-color: #ffeee4;
-  margin-top: 18px;
+
   padding-left: 28px;
   padding-top: 16px;
   border-radius: 4px;
+  margin-top: 12px;
   margin-bottom: 65px;
 }
 .sojang-light-icon {
@@ -64,6 +65,7 @@
 }
 
 .sojang-wongo-box {
+  margin-top: 45px;
   margin-bottom: 17px;
 }
 
@@ -180,6 +182,7 @@
   font-size: 15px;
   font-weight: bold;
   color: white;
+  cursor: pointer;
 }
 
 .sojang-content-box {
