--- a/frontend/here_law/src/components/document/SojangResultContainer.css
+++ b/frontend/here_law/src/components/document/SojangResultContainer.css
@@ -1,3 +1,10 @@
+.sojang-result-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 .sojang-header {
   background-color: #f3f2f2;
   width: 100%;
@@ -17,4 +24,46 @@
   padding-left: 10px;
   margin-right: 15px;
   padding-top: 1px;
+}
+
+.sojang-result-page {
+  width: 970px;
+}
+
+.sojang-result-title-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-bottom: 55px;
+}
+
+.sojang-down-wrap {
+  width: 100%;
+  height: 300px;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.sojang-down-button {
+  width: 190px;
+  height: 55px;
+  border-radius: 10px;
+  border: none;
+
+  background-color: #ff5e00;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* 가운데 정렬 */
+}
+
+a {
+  text-decoration: none; /* 밑줄 제거 */
 }
