--- a/frontend/here_law/src/components/document/DocumentUploadContainer.css
+++ b/frontend/here_law/src/components/document/DocumentUploadContainer.css
@@ -29,7 +29,7 @@
   height: 64px;
   margin-top: 100px;
   display: flex;
-  justify-content: space-between;
+
   align-items: center;
 }
 .document-input-box {
@@ -55,15 +55,16 @@
   height: 48px;
   border: 2px solid #ff5e00;
   border-radius: 10px;
-  margin-right: 5px;
+
   color: #ff5e00;
   font-weight: bold;
   font-size: 15px;
 
   display: flex;
-  justify-content: center; /* 수평 중앙 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  margin-left: 13px;
 }
 .document-upload-icon {
   width: 21px;
