--- a/frontend/here_law/src/components/document/SojangInputContainer2.css
+++ b/frontend/here_law/src/components/document/SojangInputContainer2.css
@@ -22,6 +22,7 @@
   border-radius: 5px;
   padding-left: 11px;
   margin-right: 15px;
+  padding-top: 1px;
 }
 
 .sojang-page2 {
@@ -187,7 +188,7 @@
 
   outline: none;
   padding: 0 15px;
-  box-sizing: border-box;
+  box-sizing: border-box; /* 패딩 포함한 크기 계산 */
 }
 
 .sojang-submit-button {
