--- a/frontend/here_law/src/components/document/SojangResultContainer.css
+++ b/frontend/here_law/src/components/document/SojangResultContainer.css
@@ -21,9 +21,9 @@
   color: white;
   font-size: 12px;
   border-radius: 5px;
-  padding-left: 10px;
+  padding-left: 2px;
   margin-right: 15px;
-  padding-top: 1px;
+  padding-top: 2px;
 }
 
 .sojang-result-page {
@@ -66,4 +66,10 @@
 
 a {
   text-decoration: none; /* 밑줄 제거 */
+}
+
+.sojang-pdf-icon {
+  width: 40px;
+  margin-left: 5px;
+  margin-bottom: 15px;
 }
