Feat: 매거진 화면 구현 임시
Former-commit-id: fe87fe3401bc01ffe61ba781e532a6c9e09664b2

--- a/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
+++ b/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
@@ -18,6 +18,10 @@
   margin-bottom: 15px;
 }
 
+.magazine-my-header-subs {
+  margin-bottom: 15px;
+}
+
 .magazine-my-header-title {
   font-size: 34px;
   font-weight: bold;
