Feat: 매거진임시
Former-commit-id: f15366b7cce7680b5127134924c236e141b98221

--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineCustomCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineCustomCard.css
@@ -3,7 +3,7 @@
   height: 380px;
   display: flex;
   flex-direction: column;
-  background-color: darkgreen;
+  background-color: #ebeef3;
 }
 
 .magazine-custom-card-img {
