--- a/frontend/here_law/src/components/search/caselist/CaseDetail.css
+++ b/frontend/here_law/src/components/search/caselist/CaseDetail.css
@@ -2,8 +2,7 @@
   width: 800px;
   padding-top: 60px;
   padding-bottom: 100px;
-  left: 50%;
-  transform: translate(50%, 0);
+  margin-left: 350px;
 }
 .case-detail-title {
   font-size: 28px;
@@ -46,7 +45,7 @@
   justify-content: flex-start;
   align-items: center; /* 세로 정렬을 중앙에 맞춤 */
   gap: 50px;
-  color: #9f9e9e;
+  color: #585757;
 }
 .case-detail-tab div {
   font-size: 17px;
@@ -58,7 +57,7 @@
   width: 704px;
   height: 52px;
   border-radius: 10px;
-  background-color: #f7f7fa;
+  /* background-color: #f7f7fa; */
   display: flex;
   align-items: center;
   /* justify-content: center; */
@@ -67,10 +66,25 @@
   color: #555555;
 }
 
+.case-detail-guide2 {
+  margin-top: 16px;
+  width: 704px;
+  height: 52px;
+  border-radius: 10px;
+  background-color: #f7f7fa;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  margin-left: 60px;
+  font-size: 13px;
+  color: #555555;
+}
+
 .light-icon {
-  width: 30px;
-  margin-left: 25px;
-  margin-bottom: 5px;
+  width: 27px;
+  margin-left: 30px;
+  margin-bottom: 6px;
 }
 
 .guide-box {
@@ -86,13 +100,29 @@
   margin-left: 10px;
 }
 
+.guide-box2 {
+  background-color: #f55e00;
+  width: 60px;
+  height: 25px;
+  font-size: 12px;
+  border-radius: 8px;
+  color: white;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-right: 18px;
+  margin-left: 10px;
+}
+
 .detail-title {
   margin-top: 100px;
   font-size: 18px;
   font-weight: bold;
-  display: flex;
+  /* display: flex; */
+  margin-left: 360px;
   justify-content: center;
   color: #292d32;
+  cursor: pointer;
 }
 
 .detail-text {
@@ -197,4 +227,19 @@
   margin-left: auto; /* 자동으로 왼쪽 요소들을 밀어내고 오른쪽 정렬 */
   cursor: pointer; /* 아이콘이 클릭 가능하게 보이도록 커서 변경 */
   margin-right: 10px;
+}
+
+.top-icon {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  z-index: 1000; /* 다른 요소 위에 표시되도록 설정 */
+}
+.detail-question-icon {
+  width: 27px;
+  height: 27px;
+  margin-left: 3px;
 }
