--- a/frontend/here_law/src/components/search/KeywordSearch.css
+++ b/frontend/here_law/src/components/search/KeywordSearch.css
@@ -1,4 +1,4 @@
-.keyword-search-page {
+/* .keyword-search-page {
   width: 100%;
   height: 330px;
   display: flex;
@@ -9,6 +9,25 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+} */
+
+/* KeywordSearch.css */
+.keyword-search-page {
+  width: 100%;
+  height: 330px; /* 기본 높이 */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("../../assets/search/searchbackimg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: height 0.5s ease-in-out; /* 높이 변경 애니메이션 */
+}
+
+/* Ai 모드일 때의 클래스 */
+.keyword-search-page.ai-mode {
+  height: 700px; /* 확장된 높이 */
 }
 
 .search-title {
