--- a/frontend/here_law/src/components/search/caselist/CaseDetail.css
+++ b/frontend/here_law/src/components/search/caselist/CaseDetail.css
@@ -5,15 +5,16 @@
   margin-left: 350px;
 }
 .case-detail-title {
-  font-size: 28px;
+  font-size: 29px;
   font-weight: bold;
 }
 .case-detail-bar {
-  margin-top: 20px;
+  margin-top: 27px;
   display: flex;
   justify-content: space-between; /* 왼쪽과 오른쪽으로 요소를 배치 */
   align-items: center; /* 세로 정렬을 중앙에 맞춤 */
   padding: 10px 0;
+  margin-bottom: 15px;
 }
 
 .bar-sort {
@@ -124,11 +125,35 @@
   color: #292d32;
   cursor: pointer;
 }
-
+.detail-title2 {
+  margin-top: 100px;
+  font-size: 18px;
+  font-weight: bold;
+  /* display: flex; */
+  margin-left: 378px;
+  justify-content: center;
+  color: #292d32;
+  cursor: pointer;
+}
 .detail-text {
   font-size: 17px;
   margin-top: 41px;
   line-height: 30px;
+  color: #585757;
+  position: relative;
+}
+
+.detail-text2 {
+  background-color: #f7f7fa;
+  border-radius: 8px;
+  padding: 30px;
+  font-size: 17px;
+  margin-top: 41px;
+  line-height: 30px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  text-align: center;
   color: #585757;
   position: relative;
 }
@@ -148,10 +173,10 @@
 .detail-text.collapsed::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
   width: 100%;
-  height: 30px;
+  height: 110px;
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0),
@@ -159,8 +184,18 @@
   );
 }
 
+.detail-text.collapsed {
+  max-height: none;
+  background-color: #f7f7fa;
+  border-radius: 8px;
+  padding: 30px;
+}
+
 .detail-text.expanded {
   max-height: none;
+  background-color: #f7f7fa;
+  border-radius: 8px;
+  padding: 30px;
 }
 
 .detail-see-more {
