--- a/frontend/here_law/src/components/magazine/magazinemain/CaseTypeCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/CaseTypeCard.css
@@ -36,3 +36,29 @@
   -webkit-line-clamp: 3; /* 표시할 줄 수 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
 }
+
+.case-type-card-container {
+  display: flex;
+}
+
+.case-type-card-img {
+  width: 118px;
+  height: 118px;
+  min-width: 118px;
+  min-height: 118px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.case-type-card-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.case-type-card-title {
+  font-size: 24px;
+}
+
+.case-type-card-content {
+  font-size: 12px;
+}
