Feat: 분야 이미지
Former-commit-id: 03970a68353c840a05e6689e68c66bd9f69553bb

--- a/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
+++ b/frontend/here_law/src/components/magazine/magazinemy/MagazineMy.css
@@ -50,7 +50,7 @@
 
 .magazine-my-interest-card-box {
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   flex-wrap: wrap;
   gap: 8px;
 }
