--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineMain.css
@@ -1,45 +1,57 @@
 .magazine-main {
-  padding: 15px 60px;
+  padding: 35px 60px;
 }
 
 .magazine-main-header {
   display: flex;
   justify-content: space-between;
-  height: 700px;
+  height: 600px;
+  margin-top: 25px;
 }
 
 .magazine-main-header1 {
   position: relative;
 }
 
-.magazine-main-header1-img1 {
+/* .magazine-main-header1-img1 {
   position: absolute;
   top: 0%;
   left: -15%;
   width: 650px;
   height: 450px;
   filter: grayscale(100%);
-}
+} */
 
 .magazine-main-header1-img2 {
   position: absolute;
-  left: 200px;
-  top: 50px;
-  width: 720px;
-  height: 580px;
+  left: 160px;
+  top: 55px;
+  width: 620px;
+  height: 480px;
+  filter: grayscale(100%);
 }
 
 .magazine-main-header1-title {
-  /* position: absolute; */
-  /* top: 7%;
-  left: 7%; */
   font-size: 50px;
+  /* background-color: linear-gradient(to right, #ff7e5f, #feb47b); */
+}
+.magazine-main-header1-title::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: 400px;
+  background-color: gray;
+  border-radius: 10px;
+  filter: blur(105px);
+  z-index: -1;
 }
 
 .magazine-main-header1-article-box {
   position: absolute;
-  top: 500px;
-  left: 450px;
+  top: 415px;
+  left: 730px;
   width: 250px;
   display: flex;
   flex-direction: column;
@@ -50,17 +62,17 @@
 .magazine-main-header1-article-content {
   /* font-size: 18px; */
   text-align: center;
-  font-size: 14px;
+  font-size: 12px;
   display: -webkit-box; /* flexbox 사용 */
   -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
   -webkit-line-clamp: 4; /* 표시할 줄 수 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
 
 .magazine-main-detail-button {
-  width: 170px;
-  height: 60px;
+  width: 110px;
+  height: 35px;
   border-radius: 6px;
   background-color: black;
   color: white;
