Feat:이미지삽입
Former-commit-id: f0d59560aa25798bde5d7ea9af19147244ae4e11

--- a/frontend/here_law/src/components/magazine/magazinemain/ViewCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/ViewCard.css
@@ -10,8 +10,9 @@
 .img-alt {
   width: 120px;
   height: 120px;
-  background-color: beige;
+
   border-radius: 10px;
+  object-fit: cover; /* 이미지 비율을 유지하면서 크기에 맞춤 */
 }
 
 .view-card-content-box {
