--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineCustomCard.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineCustomCard.css
@@ -1,27 +1,58 @@
 .magazine-custom-card-container {
   width: 230px;
-  height: 380px;
+  height: 320px;
   display: flex;
   flex-direction: column;
-  background-color: #ebeef3;
+  /* background-color: #ebeef3; */
+  border-radius: 10px;
+  padding: 12px;
 }
 
 .magazine-custom-card-img {
   width: 100%;
+  height: 130px;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
 
 .magazine-custom-card-title {
-  font-size: 22px;
+  font-size: 16px;
+  margin-bottom: 3px;
+  font-weight: bold;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
 .magazine-custom-view-rec {
   display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 3px;
+  font-size: 12px;
+}
+
+.magazine-custom-view {
+  margin-right: 5px;
+}
+
+.magazine-custom-date {
+  font-size: 10px;
+  opacity: 60%;
+  margin-bottom: 3px;
 }
 
 .magazine-custom-card-content {
-  font-size: 14px;
+  font-size: 12px;
   display: -webkit-box; /* flexbox 사용 */
   -webkit-box-orient: vertical; /* 수직 방향으로 정렬 */
   -webkit-line-clamp: 4; /* 표시할 줄 수 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
+}
+
+.magazine-like-icon {
+  width: 15px;
+  height: 15px;
+  margin-right: 2px;
 }
