--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineDetail.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineDetail.css
@@ -1,5 +1,5 @@
 .magazine-detail-container {
-  padding: 0px 300px;
+  padding: 0px 300px 90px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
 .magazine-detail-header {
   padding: 30px 20px;
   width: 100%;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +16,7 @@
 
 .magazine-detail-header-title {
   font-size: 34px;
+  /* text-align: start; */
 }
 
 .magazine-detail-header-date {
@@ -28,13 +29,20 @@
 .magazine-detail-img {
   width: 100%;
   height: 300px;
+  margin-bottom: 40px;
 }
 
 .magazine-detail-content {
   width: 85%;
   font-size: 16px;
+  margin-bottom: 30px;
+  line-height: 1.7;
 }
 
-/* .magazine-detail-like-button {
-
-} */
+.magazine-detail-like-button {
+  width: 120px;
+  padding: 8px 15px;
+  font-size: 17px;
+  border: none;
+  border-radius: 7px;
+}
