패치노트 수정
Former-commit-id: c1304b9a607eb6d06c924e8b99194b94f51b2ca8

--- a/frontend/here_law/src/components/magazine/magazinehotfix/MagazineHotfixCard.css
+++ b/frontend/here_law/src/components/magazine/magazinehotfix/MagazineHotfixCard.css
@@ -1,5 +1,5 @@
 .magazine-hotfix-card-container {
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .magazine-hotfix-card-head-box {
@@ -23,8 +23,9 @@
 }
 
 .magazine-hotfix-content-box {
-  margin-left: 150px;
+  margin-left: 80px;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 .magazine-hotfix-content-box-title {
@@ -34,5 +35,38 @@
 }
 
 .magazine-hotfix-content-box-content {
-  font-size: 14px;
+  font-size: 12px;
+}
+
+.rowjdwjs {
+  color: red;
+  font-size: 18px;
+}
+
+.rowjdgn {
+  color: green;
+  font-size: 18px;
+}
+
+.mini-box {
+  margin-left: 50px;
+  margin-bottom: 2cqw;
+  /* border: 1px solid black; */
+}
+
+/* .just-mini-box {
+  margin-bottom: 30px;
+} */
+
+.mini-mini-box {
+  margin-left: 30px;
+  /* margin-bottom: 30px; */
+}
+
+.just-text-title {
+  font-size: 15px;
+}
+
+.law-name {
+  margin-bottom: 10px;
 }
