--- a/frontend/here_law/src/components/search/GuideDocument.css
+++ b/frontend/here_law/src/components/search/GuideDocument.css
@@ -1,14 +1,14 @@
+/* GuideDocument.css */
 .document-guide-box {
   width: 100%;
   height: 100%;
   background-color: #f8f8f8;
   display: flex;
   flex-direction: column;
-
-  display: flex;
   justify-content: center; /* 수평 중앙 정렬 */
   align-items: center; /* 수직 중앙 정렬 */
 }
+
 .guide-wrap {
   width: 100%;
   height: 125px;
@@ -16,15 +16,16 @@
   align-items: center;
   flex-direction: column;
 }
+
 .guide-title {
   margin-top: 40px;
   font-size: 28px;
   font-weight: bold;
 }
+
 .guide-subtitle {
   font-size: 16px;
   margin-top: 14px;
-
   color: #262626;
 }
 
@@ -35,18 +36,31 @@
   background-color: white;
   border-radius: 15px;
 }
+
 .guide-result-box {
   width: 100%;
   height: 380px;
-
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 70px;
 }
+
 .guide-result-document {
   width: 435px;
   height: 250px;
   border-radius: 15px;
   background-color: white;
+  background-image: url("../../assets/search/docuguide.png");
+  background-size: cover; /* 이미지가 div를 채우도록 설정 */
+  background-position: center; /* 이미지의 중앙을 표시 */
+}
+.guide-result-document2 {
+  width: 435px;
+  height: 250px;
+  border-radius: 15px;
+  background-color: white;
+  background-image: url("../../assets/search/docuguide2.gif");
+  background-size: cover; /* 이미지가 div를 채우도록 설정 */
+  background-position: center; /* 이미지의 중앙을 표시 */
 }
