--- a/frontend/here_law/src/components/search/GuideLawyer.css
+++ b/frontend/here_law/src/components/search/GuideLawyer.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-top: 51px;
 }
 .guide-title {
   margin-top: 30px;
@@ -28,11 +29,14 @@
   color: #262626;
 }
 
-.guide-image {
+.guide-sojang-image {
   margin-top: 30px;
   width: 915px;
   height: 300px;
   background-color: white;
   border-radius: 15px;
   margin-bottom: 50px;
+  background-image: url("../../assets/search/sojangwrite2.png");
+  background-size: cover; /* 이미지를 영역에 맞게 채움 */
+  background-position: center; /* 이미지의 중앙을 표시 */
 }
