--- a/frontend/here_law/src/components/search/GuideSearch.css
+++ b/frontend/here_law/src/components/search/GuideSearch.css
@@ -33,10 +33,22 @@
 .guide-image {
   margin-top: 30px;
   width: 915px;
-  height: 300px;
-  background-color: white;
+  height: 250px;
+  /* background-color: white; */
+  background-image: url("../../assets/search/keywordgif.gif");
+  background-size: cover;
+  background-position: center;
   border-radius: 15px;
 }
+
+.guide-image img {
+  margin-top: 30px;
+  width: 915px;
+  height: 240px;
+  /* background-color: white; */
+  border-radius: 15px;
+}
+
 .guide-result-box {
   width: 100%;
   height: 380px;
@@ -47,12 +59,31 @@
   gap: 70px;
 }
 .guide-result {
-  width: 250px;
+  width: 380px;
+  height: 280px;
+  border-radius: 15px;
+  /* background-color: white; */
+
+  background-size: cover;
+  background-position: center;
+}
+
+.guide-result2 {
+  width: 400px;
   height: 250px;
   border-radius: 15px;
   background-color: white;
+
+  background-size: cover;
+  background-position: center;
 }
 
+.guide-result img {
+  width: 300px;
+  height: 250px;
+  border-radius: 15px;
+  /* background-color: white; */
+}
 /*에니메이션*/
 
 .guide-title,
@@ -60,7 +91,10 @@
 .guide-image,
 .guide-result,
 .guide-result-document,
-.guide-result-magazine {
+.guide-result-magazine,
+.guide-result-magazine2,
+.guide-sojang-image,
+.guide-result-document2 {
   opacity: 0;
   transform: translateY(30px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
@@ -71,7 +105,10 @@
 .guide-image.visible,
 .guide-result.visible,
 .guide-result-document.visible,
-.guide-result-magazine.visible {
+.guide-result-magazine.visible,
+.guide-result-magazine2.visible,
+.guide-sojang-image.visible,
+.guide-result-document2.visible {
   opacity: 1;
   transform: translateY(0);
 }
