--- a/frontend/here_law/src/components/search/AiSearch.css
+++ b/frontend/here_law/src/components/search/AiSearch.css
@@ -1,7 +1,7 @@
 .ai-search-page {
   margin-top: 13px;
   width: 100%;
-  height: 755pxx;
+  height: 755px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,11 +19,12 @@
 }
 
 .ai-chat-box {
-  margin-top: 26px;
+  margin-top: 13px;
   width: 892px;
   height: 340px;
-  border-radius: 15px;
-  border: 1px solid #828282;
+  border-radius: 10px;
+  border: 1px solid rgba(130, 130, 130, 0.6);
+  /* opacity: 60%; */
   overflow-x: hidden;
   overflow-y: auto;
   padding: 30px;
