--- a/frontend/here_law/src/components/magazine/magazinemain/MagazineDetail.css
+++ b/frontend/here_law/src/components/magazine/magazinemain/MagazineDetail.css
@@ -16,24 +16,26 @@
 
 .magazine-detail-header-title {
   font-size: 34px;
+  width: 80%;
   /* text-align: start; */
 }
 
 .magazine-detail-header-date {
-  width: 100%;
+  width: 80%;
   font-size: 12px;
   text-align: end;
   opacity: 50%;
 }
 
 .magazine-detail-img {
-  width: 95%;
+  width: 79%;
   height: 300px;
   margin-bottom: 40px;
+  object-fit: cover; /
 }
 
 .magazine-detail-content {
-  width: 85%;
+  width: 80%;
   font-size: 16px;
   margin-bottom: 30px;
   line-height: 1.7;
